# stock-price-pipeline

./: .gitignore  CMakeLists.txt  README.md  config.h  http_client.h  main.c  stock_data.csv  stock_data.h  stocks.txt
.github/workflows/: build-and-test.yml  collect-data.yml
src/core/: config.c  config.h  csv_writer.c  csv_writer.h  main.c  stock_data.c  stock_data.h  stock_parser.c  stock_parser.h
src/network/: http_client.c  http_client.h
tests/: CMakeLists.txt
tests/Unity/: unity.h
tests/unit/: test_parser.c  test_reader.c
